--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,
+body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.btn-main {
+  @apply px-3 py-1 m-2 text-gray-200 bg-blue-600 rounded hover:bg-blue-700 hover:shadow-md hover:shadow-blue-500;
+}
+
+.btn-page {
+  @apply px-3 py-1 m-2 bg-white rounded hover:bg-blue-100 hover:shadow-md hover:shadow-blue-400 text-blue-950;
+}
+
+.btn-page-active {
+  @apply px-3 py-1 m-2 bg-blue-300 rounded shadow-lg shadow-blue-500 hover:bg-blue-300 hover:shadow-blue-600 hover:shadow-lg;
+}
+
+.btn-page-disabled {
+  @apply px-3 py-1 m-2 rounded shadow-none cursor-not-allowed bg-slate-500 hover:bg-slate-500 hover:shadow-none;
 }
